--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.0",
     "dotenv": "^16.5.0",
     "elevenlabs": "^1.57.0",
+    "firebase": "^11.6.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
